// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FacetGroupRow component should render facet search with 7 results 1`] = `
<View>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel="Group Name"
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderBottomColor": "#EBEDEF",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "opacity": 1,
        "padding": 8,
      }
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <View>
      <Text
        weight="normal"
      >
        Group Name
      </Text>
      <View
        style={undefined}
      />
    </View>
    <Icon
      color="#63666A"
      name="ios-arrow-down"
      size={25}
    />
  </View>
  <View />
</View>
`;

exports[`FacetGroupRow component should render with default props 1`] = `
<View>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel="Group Name"
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderBottomColor": "#EBEDEF",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "opacity": 1,
        "padding": 8,
      }
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <View>
      <Text
        weight="normal"
      >
        Group Name
      </Text>
      <View
        style={undefined}
      >
        <Text
          color="accent"
          size="small"
        >
          one, two
        </Text>
      </View>
    </View>
    <Icon
      color="#63666A"
      name="ios-arrow-down"
      size={25}
    />
  </View>
  <View />
</View>
`;
